--- a/src/app/components/what-customers-say/what-customers-say.component.scss
+++ b/src/app/components/what-customers-say/what-customers-say.component.scss
@@ -10,6 +10,7 @@
     font-size: 25px;
     font-weight: 900;
     color: var(--main);
+    text-transform: uppercase;
 }
 
 .ContainerMain{
